提交界面绑定逻辑与MVVMLight绑定机制

--- a/osutility_Beta/osutility_Beta.csproj
+++ b/osutility_Beta/osutility_Beta.csproj
@@ -67,7 +67,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\ChildVM\ItemVM示例类.cs" />
     <Compile Include="ViewModel\MainVM.cs" />
+    <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="View\Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
@@ -122,6 +124,14 @@
       <Project>{c280011a-bbe1-4046-a00b-4f0311e8fdad}</Project>
       <Name>osuService</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="View\VisualEffect\Anime\" />
+  </ItemGroup>
+  <ItemGroup>
+    <SplashScreen Include="Resource\Image\start.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </SplashScreen>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
