--- a/OsuModel/OsuModel.csproj
+++ b/OsuModel/OsuModel.csproj
@@ -40,8 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BeatMapFile\BeatMapFile.cs" />
+    <Compile Include="BeatMapFile\BeatMapFileInfo.cs" />
     <Compile Include="BeatMap\SongInfo.cs" />
+    <Compile Include="StoryBoard\StoryBoardInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoryBoard\SBTime.cs" />
   </ItemGroup>
