--- a/OsuService/LibFactory/LibFactory.csproj
+++ b/OsuService/LibFactory/LibFactory.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1AC04C3C-0CC9-43A5-8C4E-FC6E2BF6C25B}</ProjectGuid>
+    <ProjectGuid>{947093C3-3F05-42EC-B83A-CF3FD6EA85E0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OsuModel</RootNamespace>
-    <AssemblyName>OsuModel</AssemblyName>
+    <RootNamespace>LibFactory</RootNamespace>
+    <AssemblyName>LibFactory</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,7 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,14 +39,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BeatMapFile\BeatMapFileInfo.cs" />
-    <Compile Include="BeatMap\SongInfo.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="LibBeatMap.cs" />
+    <Compile Include="LibNetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StoryBoard\SBTime.cs" />
-    <Compile Include="StoryBoard\StoryBoardInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\OsuModel\OsuModel.csproj">
+      <Project>{1ac04c3c-0cc9-43a5-8c4e-fc6e2bf6c25b}</Project>
+      <Name>OsuModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LocalService\LocalService.csproj">
+      <Project>{1d5fd350-c28b-47b8-820a-16fbf3a7d690}</Project>
+      <Name>LocalService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NetService\NetService.csproj">
+      <Project>{626d9c07-9f07-4c02-a73a-1da7669f7f6a}</Project>
+      <Name>NetService</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
