--- a/OsuService/LocalService/LocalService.csproj
+++ b/OsuService/LocalService/LocalService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1AC04C3C-0CC9-43A5-8C4E-FC6E2BF6C25B}</ProjectGuid>
+    <ProjectGuid>{1D5FD350-C28B-47B8-820A-16FBF3A7D690}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OsuModel</RootNamespace>
-    <AssemblyName>OsuModel</AssemblyName>
+    <RootNamespace>LocalService</RootNamespace>
+    <AssemblyName>LocalService</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,7 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,14 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BeatMapFile\BeatMapFileInfo.cs" />
-    <Compile Include="BeatMap\SongInfo.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="LocalBeatMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StoryBoard\SBTime.cs" />
-    <Compile Include="StoryBoard\StoryBoardInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
