--- a/Osutility_Beta/Osutility_Beta/Osutility_Beta.csproj
+++ b/Osutility_Beta/Osutility_Beta/Osutility_Beta.csproj
@@ -134,6 +134,11 @@
       <Name>LibFactory</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resource\Image\hole.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
