一次修改，添加第一次界面、逻辑、模型 这三者的使用实例（未完成）

--- a/OsuService/LibFactory/LibFactory.csproj
+++ b/OsuService/LibFactory/LibFactory.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LibBeatMap.cs" />
+    <Compile Include="LibLocalService.cs" />
     <Compile Include="LibNetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
