--- a/OsuService/LocalService/LocalService.csproj
+++ b/OsuService/LocalService/LocalService.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LibLocalService.cs" />
     <Compile Include="LocalBeatMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
