--- a/OsuModel/OsuModel.csproj
+++ b/OsuModel/OsuModel.csproj
@@ -46,7 +46,9 @@
     <Compile Include="StoryBoard\SBTime.cs" />
     <Compile Include="StoryBoard\StoryBoardInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="BeatMap\BeatMapDesin.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
