--- a/OsuService/LocalService/LocalService.csproj
+++ b/OsuService/LocalService/LocalService.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1D5FD350-C28B-47B8-820A-16FBF3A7D690}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LocalService</RootNamespace>
+    <RootNamespace>OsuService.LocalService</RootNamespace>
     <AssemblyName>LocalService</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -31,7 +31,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigCore.cs" />
+    <Compile Include="FileCore.cs" />
+    <Compile Include="JsonSerializerCore.cs" />
     <Compile Include="LibLocalService.cs" />
-    <Compile Include="LocalBeatMap.cs" />
+    <Compile Include="LocalBeatMapCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
