--- a/Osutility_Beta/Osutility_Beta/packages.config
+++ b/Osutility_Beta/Osutility_Beta/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
-  <package id="MvvmLightLibs" version="4.1.27.1" targetFramework="net40" />
+  <package id="Caliburn.Micro" version="2.0.0" targetFramework="net40" />
+  <package id="Caliburn.Micro.Core" version="2.0.0" targetFramework="net40" />
+  <package id="EPPlus" version="3.1.3.3" targetFramework="net40" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net40" />
+  <package id="ScrapySharp" version="2.2.63" targetFramework="net40" />
 </packages>
